// See README.txt for information and build instructions.
//
// Note: START and END tags are used in comments to define sections used in
// tutorials.  They are not part of the syntax for Protocol Buffers.
//
// To get an in-depth walkthrough of this file and the related examples, see:
// https://developers.google.com/protocol-buffers/docs/tutorials

// [START declaration]
syntax = "proto3";
package org.qcri.rheem.generator;

// [END declaration]

// [START java_declaration]
option java_package = "org.qcri.rheem.serialize.protocol.protobuf";
option java_outer_classname = "RheemProtoBuf";
// [END java_declaration]

// [START RheemPlan]
message RheemPlanProtoBuf {

  enum RheemPlatformProtoBuf {
    RHEEM = 0;
    JAVA = 1;
    SPARK = 2;
    FLINK = 3;
  }

  message RheemSlotProtoBuf {

    string owner = 1;
    int32 position = 2;
    repeated RheemSlotProtoBuf ocupants = 3 ;
    string type = 4;

  }

  message RheemParameterProtoBuf {
    string type = 1;
    string field_name = 2;
    bytes value = 3;
    int32 position = 4;
  }

  message RheemOperatorProtoBuf {
    string id = 1;
    string name = 2;
    string type_class = 3;
    repeated RheemParameterProtoBuf parameters = 4;
    repeated RheemSlotProtoBuf inputSlot = 5;
    repeated RheemSlotProtoBuf outputSlot = 6;
    RheemPlatformProtoBuf platform = 7;
  }




  string name = 1;
  string type = 2;

  repeated RheemPlatformProtoBuf platforms = 3;
  repeated RheemOperatorProtoBuf operators = 4;
  string identifier = 5;
}
// [END RheemPlan]